--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,7 +10,7 @@
 
 h1{
     text-align: center;
-    background-color: #5c8297;
+    background-color: #0c4968;
     padding: 30px 0px;
     margin-top: 0px;
     color: white;
@@ -45,7 +45,7 @@ ul {
 
 li {
     border-bottom: 1px solid #bfbfbf;
-    background-color: #d7d7d7;
+    background-color: #c7baba;
     padding: 10px 0px;
     margin-bottom: 5px;
 }
